--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         <div class="result-btn">
             <button id="replay" type="button" class="btn btn-secondary" onclick="replay()">다시하기</button>
             <button id="copy" type="button" class="btn btn-secondary mt-4" role="alert" onclick="copy()">링크복사</button>
+            <a id="kakaotalk-sharing-btn" href="javascript:shareMessage()">
+                <button type="button" class="btn btn-secondary mt-4" style = "width:100%;">
+                    공유하기
+                </button>
+            </a>
         </div>
     </div>
 
@@ -58,5 +63,37 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
     <script type="text/javascript" src="event.js"></script>
 
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.1.0/kakao.min.js"
+  integrity="sha384-dpu02ieKC6NUeKFoGMOKz6102CLEWi9+5RQjWSV0ikYSFFd8M3Wp2reIcquJOemx" crossorigin="anonymous"></script>
+<script>
+  Kakao.init('ce9ed9b4c4a30f12b9a3e9d41d34410d'); // 사용하려는 앱의 JavaScript 키 입력
+</script>
+
+
+<script>
+  function shareMessage() {
+    Kakao.Share.sendDefault({
+      objectType: 'feed',
+      content: {
+        title: '나만의 유형테스트!',
+        description: 'MBTI유형별 나에게 딱 맞는 학과/트랙은?',
+        imageUrl:
+          'http://https://ibb.co/https://ibb.co/wrBhk3K.kakaocdn.net/dn/Q2iNx/btqgeRgV54P/VLdBs9cvyn8BJXB3o7N8UK/kakaolink40_original.png',
+        link: {
+          // [내 애플리케이션] > [플랫폼] 에서 등록한 사이트 도메인과 일치해야 함
+          webUrl: 'https://cool-marzipan-0cea79.netlify.app/',
+        },
+      },
+      buttons: [
+        {
+          title: '웹으로 보기',
+          link: {
+            webUrl: 'https://cool-marzipan-0cea79.netlify.app/',
+          },
+        },
+      ],
+    });
+  }
+</script>
 </body>
 </html>
